HTML and Word versions

--- a/HTML/ch2.html
+++ b/HTML/ch2.html
@@ -444,5 +444,13 @@ int main (void)
     <dt>composition:</dt>
     <dd>The ability to combine simple expressions and statements into compound statements and expressions in order to represent complex computations concisely.</dd>
   </dl>
-  <a href="ch2.html">prev</a> <a href="ch3.html">next</a> 
+  <a href="ch1.html">prev</a> <a href="ch3.html">next</a> 
+  
+  <p> 
+Permission is granted to copy, distribute, transmit and adapt this work un- der the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 Inter- national License: https://creativecommons.org/licenses/by-nc/4.0/. 
+If you are interested in distributing a commercial version of this work, please contact the author(s). 
+The LATEX source and code for this book is available from: https://github.com/mkpenta/ThinkC 
+</p>
+
+</body>
   
