--- a/ch1.html
+++ b/ch1.html
@@ -22,6 +22,8 @@
 
 <p>There are two ways to translate a program; <strong>interpreting</strong> or <strong>compiling</strong>. An interpreter is a program that reads a high-level program and does what it says. In effect, it translates the program line-by-line, alternately reading lines and carrying out commands.</p>
 
+<p><img src="figs/Interpreter" alt="Interpreter" height="300"></p>
+
 <p>A compiler is a program that reads a high-level program and translates it all at once, before executing any of the commands. Often you compile the program as a separate step, and then execute the compiled code later. In this case, the high-level program is called the <strong>source code</strong>, and the translated program is called the <strong>object code</strong> or the <strong>executable</strong>.</p>
 
 <p>As an example, suppose you write a program in C. You might use a text editor to write the program (a text editor is a simple word processor). When the program is finished, you might save it in a file named <strong>program.c</strong>, where "program" is an arbitrary name you make up, and the suffix <strong>.c</strong> is a convention that indicates that the file contains C source code.</p>
@@ -245,10 +247,4 @@ int main(void)
   <dd>The process of finding and removing any of the three kinds of errors.</dd>
 </dl>
    <a href="ch2.html">next</a> 
-   
-<p> 
-Permission is granted to copy, distribute, transmit and adapt this work un- der the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 Inter- national License: https://creativecommons.org/licenses/by-nc/4.0/. 
-If you are interested in distributing a commercial version of this work, please contact the author(s). 
-The LATEX source and code for this book is available from: https://github.com/mkpenta/ThinkC 
-</p>
 </body>
